--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout
+        uses: actions/checkout@v3
         with:
           ref: workflow_1
       - name: Install NodeJs
-        uses: actions/setup-node
+        uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Install dependencies
