--- a/.github/workflows/use-reusable.yml
+++ b/.github/workflows/use-reusable.yml
@@ -71,7 +71,7 @@ jobs:
 
   deploy:
     needs: build
-    uses: ./.github/workflows/deploy.yml@v1
+    uses: ./.github/workflows/deploy.yml
     with:
       artifact-name: dist-files
 
